--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "HOST=127.1.3.9 nuxt start",
+    "start": "nuxt start",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -18,6 +18,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "nuxt": "^3.13.0",
+    "nuxt-calendly": "^0.1.21",
     "nuxt-lazy-load": "^3.0.4",
     "pinia": "^2.2.4",
     "sass": "^1.77.8",
